--- a/src/JenkinsNotificationTool/Views/ConfigurationView.xaml
+++ b/src/JenkinsNotificationTool/Views/ConfigurationView.xaml
@@ -2,10 +2,12 @@
     x:Class="JenkinsNotificationTool.Views.ConfigurationView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:api="clr-namespace:JenkinsNotification.Core.ViewModels.WebApi;assembly=JenkinsNotification.Core"
     xmlns:customControls="clr-namespace:JenkinsNotification.CustomControls;assembly=JenkinsNotification.CustomControls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:dragablz="http://dragablz.net/winfx/xaml/dragablz"
     xmlns:local="clr-namespace:JenkinsNotificationTool.Views"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewModels="clr-namespace:JenkinsNotificationTool.ViewModels"
     x:Name="View"
@@ -21,6 +23,7 @@
         <Style BasedOn="{StaticResource {x:Type RadioButton}}" TargetType="{x:Type RadioButton}">
             <Setter Property="Margin" Value="0,0,12,0" />
         </Style>
+        <CollectionViewSource x:Key="JobCollection" Source="{Binding Jobs, Mode=OneWay}" />
     </customControls:View.Resources>
     <Grid x:Name="LayoutRoot">
         <Grid.RowDefinitions>
@@ -92,7 +95,57 @@
                     </StackPanel>
                 </Grid>
             </TabItem>
-            <TabItem Header="通知条件詳細" />
+            <TabItem Header="通知条件詳細">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <Grid Grid.Row="0" Margin="12,12,12,8">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                        <TextBox Grid.Column="0" />
+                        <Button
+                            Grid.Column="1"
+                            Width="40"
+                            Height="40"
+                            Command="{Binding RefreshJobsCommand, Mode=OneWay}"
+                            Style="{DynamicResource MaterialDesignFloatingActionLightButton}">
+                            <materialDesign:PackIcon Kind="Refresh" />
+                        </Button>
+                    </Grid>
+                    <Border Grid.Row="1" Margin="12,4,12,12">
+                        <DataGrid CanUserReorderColumns="False" ItemsSource="{Binding Mode=OneWay, Source={StaticResource JobCollection}}"
+                                  AutoGenerateColumns="False"
+                                  CanUserAddRows="False"
+                                  CanUserDeleteRows="False">
+                            <DataGrid.Columns>
+                                <!--  TODO ヘッダー名をリソースに追加する。  -->
+                                <DataGridTemplateColumn ClipboardContentBinding="{x:Null}" Header="状態">
+                                    <DataGridTemplateColumn.CellTemplate>
+                                        <DataTemplate DataType="{x:Type api:JobViewModel}">
+                                            <Grid>
+                                                <Ellipse
+                                                    Width="24"
+                                                    Height="24"
+                                                    Margin="3"
+                                                    Fill="{Binding Color, Mode=OneWay}"
+                                                    Stroke="DarkGray" />
+                                            </Grid>
+                                        </DataTemplate>
+                                    </DataGridTemplateColumn.CellTemplate>
+                                </DataGridTemplateColumn>
+                                <DataGridTextColumn
+                                    Binding="{Binding Name, Mode=OneWay}"
+                                    ClipboardContentBinding="{x:Null}"
+                                    Header="名称" />
+                            </DataGrid.Columns>
+                        </DataGrid>
+                    </Border>
+                </Grid>
+            </TabItem>
         </dragablz:TabablzControl>
         <StackPanel
             Grid.Row="1"
